--- a/.github/workflows/clp-core-build.yaml
+++ b/.github/workflows/clp-core-build.yaml
@@ -329,5 +329,7 @@ jobs:
           use_published_image: >-
             ${{needs.filter-relevant-changes.outputs.ubuntu_jammy_image_changed == 'false'
             || (github.event_name != 'pull_request' && github.ref == 'refs/heads/main')}}
-          run_command: >-
-            task lint:check-cpp-${{(github.event_name == 'schedule') && 'full' || 'diff'}}
+          # When enough files are passing clang-tidy switch to a full pass on schedule only.
+          # run_command: >-
+          #   task lint:check-cpp-${{(github.event_name == 'schedule') && 'full' || 'diff'}}
+          run_command: "task lint:check-cpp-full"
