--- a/.github/actions/run-on-image/action.yaml
+++ b/.github/actions/run-on-image/action.yaml
@@ -56,6 +56,7 @@ runs:
         --workdir /mnt/repo
         ${{steps.get_image_props.outputs.qualified_image_name}}
         bash -c "id; echo $HOME"
+      shell: "bash"
 
     - run: >-
         docker run
