--- a/.github/actions/run-on-image/action.yaml
+++ b/.github/actions/run-on-image/action.yaml
@@ -42,20 +42,22 @@ runs:
     - run: "./tools/scripts/deps-download/init.sh"
       shell: "bash"
 
-    - name: "test local id"
-      run: |-
+    - run: |-
         id
         echo "$HOME"
+        pwd
+        ls -la "$(pwd)"
+        ls -la "/"
+        ls -la "$HOME"
       shell: "bash"
 
-    - name: "test docker id"
-      run: >-
+    - run: >-
         docker run
         --user $(id -u):$(id -g)
         --volume "$GITHUB_WORKSPACE":/mnt/repo
         --workdir /mnt/repo
         ${{steps.get_image_props.outputs.qualified_image_name}}
-        bash -c "id; echo $HOME"
+        bash -c "id; echo $HOME; echo $(pwd); ls -la $(pwd); ls -la /"
       shell: "bash"
 
     - run: >-
