--- a/.github/actions/run-on-image/action.yaml
+++ b/.github/actions/run-on-image/action.yaml
@@ -44,11 +44,12 @@ runs:
 
     - run: |-
         id
-        echo "$HOME"
-        pwd
-        ls -la "$(pwd)"
-        ls -la "/"
+        echo "home: $HOME"
         ls -la "$HOME"
+        echo "pwd: $(pwd)"
+        ls -la "$(pwd)"
+        echo "root:"
+        ls -la "/"
       shell: "bash"
 
     - run: >-
@@ -57,7 +58,7 @@ runs:
         --volume "$GITHUB_WORKSPACE":/mnt/repo
         --workdir /mnt/repo
         ${{steps.get_image_props.outputs.qualified_image_name}}
-        bash -c "id; echo $HOME; echo $(pwd); ls -la $(pwd); ls -la /"
+        bash -c '"id; echo "home: $HOME"; ls -la "$HOME"; echo "pwd: $(pwd)"; ls -la "$(pwd)" echo "root:" ls -la "/"'
       shell: "bash"
 
     - run: >-
